GNOME Bugzilla – Bug 769310
Throws loads of warnings on startup
Last modified: 2016-07-29 17:33:34 UTC
(gnome-control-center:24178): GLib-CRITICAL **: g_variant_get_string: assertion 'g_variant_is_of_type (value, G_VARIANT_TYPE_STRING) || g_variant_is_of_type (value, G_VARIANT_TYPE_OBJECT_PATH) || g_variant_is_of_type (value, G_VARIANT_TYPE_SIGNATURE)' failed Backtrace:
+ Trace 236495
Created attachment 332364 [details] [review] keyboard: make sure to retrieve the correct type from variants When comparing the keyboard shortcut's default and current values, we double-check what kind of variant the default value is, but don't check that for the user value. This ends up throwing lots of variant-related warnings, as the user value may not be a plain string. Fix that by checking the variant types both for the user and the default value of the shortcut's settings.
Moved the "*" one pixel to the right ;) Attachment 332364 [details] pushed as 00f1b53 - keyboard: make sure to retrieve the correct type from variants